--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@ margin: 200px 20x 0 0;
 	margin: auto;
 	display: block;
 }	
+ html {
+  background-color: #00539F;
+}
+body {
+  width: 600px;
+  margin: 0 auto;
+  background-color: #FF9500;
+  padding: 0 20px 20px 20px;
+  border: 5px solid black;
+}
     </style>
 
 </head>
