--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>pagina web</title>
+     <meta charset="utf-8">
 <link href="https://fonts.googleapis.com/css?family=Barriecito&display=swap" rel="stylesheet">
     <style>
 		.contenedor {
@@ -34,20 +35,28 @@ margin: 200px 20x 0 0;
   background-color: #00539F;
 }
 body {
-  width: 600px;
+  width: 900px;
   margin: 0 auto;
   background-color: #FF9500;
   padding: 0 20px 20px 20px;
   border: 5px solid black;
 }
+        .puntos-container {
+            background-color: white;
+            border: green;
+        }
     </style>
 
 </head>
 
 <body>
 	<img class="logo" src="/logo.png"></img>
-	<h1 class="puntos-c">puntos</h1>
-    <h1 class="puntos-c"><span class="puntos">0</span></h1>
+
+    <div class="puntos-container">
+        <h1 class="puntos-c">puntos</h1>
+        <h1 class="puntos-c"><span class="puntos">0</span></h1>
+    </div>
+
 	<div class="cosa-contentor">
 		<img class="cosa" src="/manzana.jpg"></img>	
 	</div>
