--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body {
 }
         .puntos-container {
             background-color: white;
-            border: green;
+           border: 3px solid green;
         }
     </style>
 
