--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@ body {
         .puntos-container {
             background-color: white;
            border: 3px solid green;
+           display: inline-block;
+			padding: 20px;
         }
     </style>
 
