--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			position: absolute;
 			left: calc(50% - 100px);
 			top: 200px;
+			z-index: 999;
 		}
 .puntos-c {
 font-family: 'Barriecito', cursive;
