--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body {
 </head>
 
 <body>
-	<img class="logo" src="/logo.png"></img>
+	<img class="logo" src="/logo.jpg"></img>
 
     <div class="puntos-container">
         <h1 class="puntos-c">puntos</h1>
