--- a/new.html
+++ b/new.html
@@ -33,12 +33,12 @@ margin: 200px 20x 0 0;
 	display: block;
 }	
  html {
-  background-color: green;
+  background-color: solid green;
 }
 body {
   width: 900px;
   margin: 0 auto;
-  background-color: #FF9500;
+  background-color: solid green;
   padding: 0 20px 20px 20px;
   border: 5px solid black;
 }
