--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ margin: 200px 20x 0 0;
 body {
   width: 900px;
   margin: 0 auto;
-  background-color: #FF9500;
+  background-color: white;
   padding: 0 20px 20px 20px;
   border: 5px solid black;
 }
